@@ -1857,6 +1857,19 @@ t/scenarios/backend_nagios4/omd/playbook.yml
 t/scenarios/backend_nagios4/omd/test.cfg
 t/scenarios/backend_nagios4/thruk.conf
 t/scenarios/backend_nagios4/thruk_local.conf
+t/scenarios/backend_tls_livestatus/client.key
+t/scenarios/backend_tls_livestatus/client.pem
+t/scenarios/backend_tls_livestatus/docker-compose.yml
+t/scenarios/backend_tls_livestatus/Makefile
+t/scenarios/backend_tls_livestatus/omd/Dockerfile
+t/scenarios/backend_tls_livestatus/omd/playbook.yml
+t/scenarios/backend_tls_livestatus/omd/server.key
+t/scenarios/backend_tls_livestatus/omd/server.pem
+t/scenarios/backend_tls_livestatus/omd/stunnel.conf
+t/scenarios/backend_tls_livestatus/omd/xinetd.conf
+t/scenarios/backend_tls_livestatus/t/300-controller_tac.t
+t/scenarios/backend_tls_livestatus/thruk.conf
+t/scenarios/backend_tls_livestatus/thruk_local.conf
 t/scenarios/cookie_auth_ldap_e2e/docker-compose.yml
 t/scenarios/cookie_auth_ldap_e2e/Makefile
 t/scenarios/cookie_auth_ldap_e2e/omd/auth_ldap.conf
