@@ -1,0 +1,23 @@
+-----BEGIN CERTIFICATE-----
+MIID5DCCAsygAwIBAgIJAJivy4ozMnFFMA0GCSqGSIb3DQEBCwUAMIGFMQswCQYD
+VQQGEwJERTEMMAoGA1UECAwDTlJXMQ4wDAYDVQQHDAVFYXJ0aDEXMBUGA1UECgwO
+UmFuZG9tIENvbXBhbnkxCzAJBgNVBAsMAklUMRIwEAYDVQQDDAlsb2NhbGhvc3Qx
+HjAcBgkqhkiG9w0BCQEWD2RldmVsQHRocnVrLm9yZzAgFw0xODAyMDgxNDI4MzZa
+GA8yMDcyMTExMTE0MjgzNlowgYUxCzAJBgNVBAYTAkRFMQwwCgYDVQQIDANOUlcx
+DjAMBgNVBAcMBUVhcnRoMRcwFQYDVQQKDA5SYW5kb20gQ29tcGFueTELMAkGA1UE
+CwwCSVQxEjAQBgNVBAMMCWxvY2FsaG9zdDEeMBwGCSqGSIb3DQEJARYPZGV2ZWxA
+dGhydWsub3JnMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAtQQRl0o8
+PamJKOtvqqcOLYPQWxctqaR15HO29d1m+LbNyE0vKs2jpQsLK1h6pB5LVxVqCAvT
+91G6MID1/3pyFGKwD4hw2ZNUo5hCti3c8c+UmKiUyrUFfn0zPBTl6pqvuga3nw6d
+N6IsaK+u4DhTru5a4pOO6AgXSRt56QEcA/ewVKrlZXrHI7bWO9Ydg2WxJ1cr6apF
+51dlKPXrvlQdMH4ju+WSJfsXhUWG+502s8chuKIXWf9ewj8rFpAoH9ZmgN4qW5Wf
+56cZOcw8BZ418KM4qLdKZCHgc6M2gnT5zIos0l0QQD+4Yk9QRngVDHM933r0hlLo
+EbqlRv1Qs4k6sQIDAQABo1MwUTAdBgNVHQ4EFgQURxx8Sx7z8Iix/e7InNudZG11
+jJkwHwYDVR0jBBgwFoAURxx8Sx7z8Iix/e7InNudZG11jJkwDwYDVR0TAQH/BAUw
+AwEB/zANBgkqhkiG9w0BAQsFAAOCAQEAjIVfTc3lDvrVB+QAggaAY8CXnYsSk3cN
+QL1CmVqd2/wcr1LgYROsvKxuLsILrqvxu6hh6YwXVU+oG9CmuVHFDZGxDfMpZUkk
+8AELjwPxAN427b1bovalKnmPoUNfOYgeIgdx4g/MEqCKaQnAtPlLM0hIsbkZkj9f
+5ZjOPn/Eo19k7zV6bi7cQ9elZcFyKiP1WLZl1HAYD/w/WQurSX0uAi9mJDlOUj+q
+xd+UA1SaTVdVMunZ505oAU1DFjEiOp2F9PyIkOTY9ggr/NAx6yeS0ci6VixVb6OY
+mtHuXFO+g5TyNf+XDNwR+FD2on8UZEcjiy7CmTxJsbMxEW8LHZVuWQ==
+-----END CERTIFICATE-----
