@@ -1,0 +1,23 @@
+-----BEGIN CERTIFICATE-----
+MIID5DCCAsygAwIBAgIJAM9i+BnlDLrcMA0GCSqGSIb3DQEBCwUAMIGFMQswCQYD
+VQQGEwJERTEMMAoGA1UECAwDTlJXMQ4wDAYDVQQHDAVFYXJ0aDEXMBUGA1UECgwO
+UmFuZG9tIENvbXBhbnkxCzAJBgNVBAsMAklUMRIwEAYDVQQDDAlsb2NhbGhvc3Qx
+HjAcBgkqhkiG9w0BCQEWD2RldmVsQHRocnVrLm9yZzAgFw0xODAyMDgxNDI4MzZa
+GA8yMDcyMTExMTE0MjgzNlowgYUxCzAJBgNVBAYTAkRFMQwwCgYDVQQIDANOUlcx
+DjAMBgNVBAcMBUVhcnRoMRcwFQYDVQQKDA5SYW5kb20gQ29tcGFueTELMAkGA1UE
+CwwCSVQxEjAQBgNVBAMMCWxvY2FsaG9zdDEeMBwGCSqGSIb3DQEJARYPZGV2ZWxA
+dGhydWsub3JnMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA0yXXq8cR
+ixtWHDDHXP5vHeg2vTjaZUEpS6v7Byerkqxzaa6R1TyzSmtPY7z2E2l2heYkDgmZ
+AXMFKAuGqqBnIU0lmFLagn8tgK7SSqrFbqDbo/Mfbbl8FdMk7xxL2YatHFxBjhFw
+hcqKPC7y9aQVR3qjFAbppaJUEWSw1GTg88vNJpOabd68YB+SRG/TXXxWmBNZ0No3
+0Et+TjLcCFqKJ4+/bnbXmFZWETJZJ6jPJSXiRB4e78ovBQiUCt3Aqoj3/P8Ah/Cm
+Vswx8EmLXV+QHlEYjG32Boc9P0w9OPYgW3DFw8iCaG6Mlfx2FkBEejPE1ULSYcLA
+BpzHD1PsD5MlDwIDAQABo1MwUTAdBgNVHQ4EFgQUByiCLlYix2Ava1JlOunycW51
+Hs8wHwYDVR0jBBgwFoAUByiCLlYix2Ava1JlOunycW51Hs8wDwYDVR0TAQH/BAUw
+AwEB/zANBgkqhkiG9w0BAQsFAAOCAQEASYxo/dLXuUwSvpo6Sbd+XtZkUWMDuA24
+armMr2CxFNbVNaIflTFzNB47IKax712HLTeqQfSJj+Xj0+InQTJyPjtt32IJZDDA
+SSxvTdXZZX1nKkx5ZgC4pWGADES9/XGVLineIGjPArCZnEoxl6+3XiYpojGoo6yg
+vTO3Lnq9QpwKgsSUTU0/m9tGEBT7xfNHLAq1hJ+NHl9rKyEL5g244dYYqX4acS5l
+t8BJ6MlohWPvWlpDkxc64dOSoZhL4CGNti41wnhmJ8dKKU9/4RHcwiqIunm17vV4
+oq8U8zYFdJh8HiRq+9JLR0F6viura+HnmJ06VBzDo1zZaj6h4aO1LA==
+-----END CERTIFICATE-----
