@@ -1,0 +1,13 @@
+service                = tls_livestatus
+exec                   = /usr/bin/timeout
+execargs               = timeout 600 /omd/versions/default/bin/unixcat /omd/sites/demo/tmp/run/live
+cert                   = /omd/sites/demo/etc/stunnel/server.pem
+key                    = /omd/sites/demo/etc/stunnel/server.key
+compression            = zlib
+ciphers                = AES128-SHA
+verify                 = 2
+CAfile                 = /scenario/client.pem
+TIMEOUTidle            = 600
+debug                  = debug
+output                 = /omd/sites/demo/var/log/stunnel.log
+syslog                 = no
