@@ -1,0 +1,17 @@
+service tls_livestatus
+{
+        type            = UNLISTED
+        socket_type     = stream
+        protocol        = tcp
+        port            = 6557
+        wait            = no
+        cps             = 100 3
+        instances       = 500
+        per_source      = 250
+        flags           = NODELAY
+#        only_from       = 127.0.0.1
+        disable         = no
+        user            = demo
+        server          = /usr/bin/stunnel
+        server_args     = /omd/sites/demo/etc/stunnel/stunnel.conf
+}
