@@ -1,0 +1,17 @@
+<Component Thruk::Backend>
+    <peer>
+        name    = tls_livestatus
+        id      = id
+        type    = livestatus
+        <options>
+            peer    = tls://localhost:60557
+            cert    = t/scenarios/backend_tls_livestatus/client.pem
+            key     = t/scenarios/backend_tls_livestatus/client.key
+            ca_file = t/scenarios/backend_tls_livestatus/omd/server.pem
+            verify  = 1
+        </options>
+    </peer>
+</Component>
+
+#use_lmd_core=1
+#lmd_core_bin=lmd
